Move style into own file. Fix viewport.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="style.css" media="all" rel="stylesheet" type="text/css" />
+
     <script>var googletag=googletag||{};googletag.cmd=googletag.cmd||[];(function(){var a=document.createElement("script");a.async=true;a.type="text/javascript";var c="https:"==document.location.protocol;a.src=(c?"https:":"http:")+"//www.googletagservices.com/tag/js/gpt.js";var b=document.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b)})();</script>
     <script src="harmony.js"></script>
     <script>
@@ -17,20 +20,6 @@
         Harmony.enableServices();
         Harmony.display();
     </script>
-    <style>
-        body {
-            padding-top: 60px;
-            text-align: center;
-        }
-        .ad {
-            border: 1px solid black;
-            margin-top: 5px;
-        }
-        .ad div {
-            margin: auto;
-            text-align: center;
-        }
-    </style>
 </head>
 <body>
     <div id="div-gpt-ad-HP01" class="ad"></div>
