--- a/index.html
+++ b/index.html
@@ -4,25 +4,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" media="all" rel="stylesheet" type="text/css" />
 
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>var googletag=googletag||{};googletag.cmd=googletag.cmd||[];(function(){var a=document.createElement("script");a.async=true;a.type="text/javascript";var c="https:"==document.location.protocol;a.src=(c?"https:":"http:")+"//www.googletagservices.com/tag/js/gpt.js";var b=document.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b)})();</script>
     <script src="harmony.js"></script>
     <script>
-        Harmony.newSlot('HP01', [
-            [728, 90],
-            [970, 30]
-        ]);
-        Harmony.newSlot('RP01', [
-            [300, 250]
-        ]);
-        Harmony.newSlot('LV01', [
-            [88, 31]
-        ]);
-        Harmony.setConfig(function () {
-            Harmony.log('Setting single request mode.');
-            googletag.pubads().enableSingleRequest();
+        $(function () {
+            Harmony.newSlot('HP01', [
+                [728, 90],
+                [970, 30]
+            ]);
+            Harmony.newSlot('RP01', [
+                [300, 250]
+            ]);
+            Harmony.newSlot('LV01', [
+                [88, 31]
+            ]);
+            Harmony.setConfig(function () {
+                Harmony.log('Setting single request mode.');
+                googletag.pubads().enableSingleRequest();
+            });
+            Harmony.enableServices();
+            Harmony.display();
         });
-        Harmony.enableServices();
-        Harmony.display();
     </script>
 </head>
 <body>
