Convert to sticky-dfp test

--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <script src="yobidashi.min.js"></script>
     <script src="henka.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="waypoints.min.js"></script>
+    <script src="waypoints-sticky.min.js"></script>
     <script>var googletag=googletag||{};googletag.cmd=googletag.cmd||[];(function(){var a=document.createElement("script");a.async=true;a.type="text/javascript";var c="https:"==document.location.protocol;a.src=(c?"https:":"http:")+"//www.googletagservices.com/tag/js/gpt.js";var b=document.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b)})();</script>
     <script src="harmony.js"></script>
     <script>
         $(function () {
+            $('#div-gpt-ad-MY01').waypoint('sticky', {
+                offset: 30
+            });
             Harmony.newSlot('MY01', [
                 [970, 30],
                 [728, 90],
