block ad shows up better on the bottom.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 [[0, 0], [88, 31]]
             ];
             Harmony.newSlot('MY01', sizes, mapping);
-            Harmony.newSlot('MY02', sizes, mapping);
+            Harmony.newSlot('MY02', [300, 250]);
             Harmony.conf.push(function () {
                 var pubads = googletag.pubads();
                 pubads.enableSingleRequest();
